remove included build

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 // this defines a composite build - you won't need this in your project
-includeBuild '../gradle-lombok-plugin'
+//includeBuild '../gradle-lombok-plugin'
 
 rootProject.name = 'gradle-lombok-examples'
 
